# baresip-villa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
actor-v3/: actor.py  create.sql  elevator.py  fahrstuhl.py  location.py  molecule.py  protocol.py  villa-empty.db  villa.py
cmake/: FindBARESIP.cmake  FindRE.cmake
config/: config
src/: json_tcp.c  json_tcp.h  villa.cpp  villa.h  villa_module.c
